2004-08-27 nalin
	* src/minikafs.c: handle cases where the length of the realm name >
	length of the cell name.

2004-08-27 nalin
	* src/options.c(_pam_krb5_options_init): set the default realm for
	ctx (#116198).

2004-08-26 nalin
	* src/options.h,options.c: add an ignore_afs flag to the options
	structure, heavily based on Matthew Miller's patch (#126345).
	* auth.c, session.c, sly.c: obey ignore_afs.

2004-08-26 nalin
	* src/acct.c(pam_sm_acct_mgmt): skip .k5login check of user_check was
	disabled -- it's not as if we can expect an unknown user to have a home
	directory.

2004-08-26 nalin
	* src/conv.c(_pam_krb5_conv_call): return PAM_BAD_ITEM instead of
	PAM_CONV_ERR if the application didn't define a conversation function.

2004-08-26 nalin
	* src/minikafs.c(minikafs_ioctlcall): add, from Alexander Bostrom
	(#127529).
	* src/minikafs.c(minikafs_call): add, calling afs_ioctlcall or
	afs_syscall as appropriate, from Alexander Bostrom (#127529).  The
	setpag and pioctl functions now call this function instead of our
	afs_syscall.
	* src/minikafs.c(minikafs_has_afs): check for ioctl-based interface to
	Arla or OpenAFS for Linux 2.6, from Alexander Bostrom (#127529).

2004-08-26 nalin
	* src/password.c(pam_sm_chauthtok): prompt for the user's current
	password when use_first_pass isn't flagged, ignoring use_authtok
	during the initial-authentication pass (#130950).

2004-06-14 nalin
	* src/session.c(pam_sm_open_session,pam_sm_close_session): log what
	we return, and why, if debugging is enabled.

2004-06-14 nalin
	* src/acct.c(pam_sm_acct_mgmt): likewise, catch and log specific error
	information for EAGAIN, KRB5_REALM_CANT_RESOLVE, and KRB5_KDC_UNREACH
	errors.

2004-06-14 nalin
	* src/v5.c(v5_get_creds): return PAM_AUTHINFO_UNAVAIL if we got EAGAIN,
	which is triggered by a transient hostname resolution error (John
	Dennis).  Also do this for KRB5_REALM_CANT_RESOLVE and KRB5_KDC_UNREACH
	error cases.

2004-04-21 nalin