@@ -1,4 +1,8 @@
 2004-08-27 nalin
+	* src/userinfo.c(_pam_krb5_user_info_init): override the realm name to
+	be the one which was passed in (#116198).
+
+2004-08-27 nalin
 	* src/minikafs.c: handle cases where the length of the realm name >
 	length of the cell name.
 
